// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.Bricks.P checkGrammar 1`] = `
<p
  className="uu5-bricks-p"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.P checkGrammar 2`] = `
<p
  className="uu5-bricks-p"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.P checkGrammar 3`] = `
<p
  className="uu5-bricks-p"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.P checkGrammar 4`] = `
<p
  className="uu5-bricks-p"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.P checkHighlight 1`] = `
<p
  className="uu5-bricks-p"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.P checkHighlight 2`] = `
<p
  className="uu5-bricks-p"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.P checkHighlight 3`] = `
<p
  className="uu5-bricks-p"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.P checkHighlight 4`] = `
<p
  className="uu5-bricks-p"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.P checkSpaces 1`] = `
<p
  className="uu5-bricks-p"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.P checkSpaces 2`] = `
<p
  className="uu5-bricks-p"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.P checkSpaces 3`] = `
<p
  className="uu5-bricks-p"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.P checkSpaces 4`] = `
<p
  className="uu5-bricks-p"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.P className 1`] = `
<p
  className="uu5-bricks-p my-classname"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.P content 1`] = `
<p
  className="uu5-bricks-p"
  id="uuID"
  style={Object {}}
  title={null}
>
  12345
</p>
`;

exports[`UU5.Bricks.P content 2`] = `
<p
  className="uu5-bricks-p"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="This is Content from ContentMixin"
  />
</p>
`;

exports[`UU5.Bricks.P content 3`] = `
<p
  className="uu5-bricks-p"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="This is Content from ContentMixin"
  />
</p>
`;

exports[`UU5.Bricks.P content 4`] = `
<p
  className="uu5-bricks-p"
  id="uuID"
  style={Object {}}
  title={null}
>
  12345
</p>
`;

exports[`UU5.Bricks.P controlled 1`] = `
<p
  className="uu5-bricks-p"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.P controlled 2`] = `
<p
  className="uu5-bricks-p"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.P controlled 3`] = `
<p
  className="uu5-bricks-p"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.P controlled 4`] = `
<p
  className="uu5-bricks-p"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.P default props 1`] = `
<p
  className="uu5-bricks-p"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.P disabled 1`] = `
<p
  className="uu5-bricks-p uu5-common-disabled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-common-disabled-cover"
    key="disabledCover"
  />
</p>
`;

exports[`UU5.Bricks.P disabled 2`] = `
<p
  className="uu5-bricks-p"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.P disabled 3`] = `
<p
  className="uu5-bricks-p"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.P disabled 4`] = `
<p
  className="uu5-bricks-p uu5-common-disabled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-common-disabled-cover"
    key="disabledCover"
  />
</p>
`;

exports[`UU5.Bricks.P docKit examples UU5.Bricks.P should render without crash 1`] = `
<p
  className="uu5-bricks-p"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="This is my custom Paragraph"
  />
</p>
`;

exports[`UU5.Bricks.P dynamic 1`] = `
<p
  className="uu5-bricks-p"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.P dynamic 2`] = `
<p
  className="uu5-bricks-p"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.P dynamic 3`] = `
<p
  className="uu5-bricks-p"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.P dynamic 4`] = `
<p
  className="uu5-bricks-p"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.P hidden 1`] = `
<p
  className="uu5-bricks-p uu5-common-hidden"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.P hidden 2`] = `
<p
  className="uu5-bricks-p"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.P hidden 3`] = `
<p
  className="uu5-bricks-p"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.P hidden 4`] = `
<p
  className="uu5-bricks-p uu5-common-hidden"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.P id 1`] = `
<p
  className="uu5-bricks-p"
  id="myId"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.P ignoreHTML 1`] = `
<p
  className="uu5-bricks-p"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.P ignoreHTML 2`] = `
<p
  className="uu5-bricks-p"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.P ignoreHTML 3`] = `
<p
  className="uu5-bricks-p"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.P ignoreHTML 4`] = `
<p
  className="uu5-bricks-p"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.P mainAttrs 1`] = `
<p
  className="uu5-bricks-p"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.P name 1`] = `
<p
  className="uu5-bricks-p"
  id="uuID"
  name="myName"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.P noIndex 1`] = `
<p
  className="uu5-bricks-p uu5-noindex"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.P noIndex 2`] = `
<p
  className="uu5-bricks-p"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.P noIndex 3`] = `
<p
  className="uu5-bricks-p"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.P noIndex 4`] = `
<p
  className="uu5-bricks-p uu5-noindex"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.P selected 1`] = `
<p
  className="uu5-bricks-p uu5-common-selected"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.P selected 2`] = `
<p
  className="uu5-bricks-p"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.P selected 3`] = `
<p
  className="uu5-bricks-p"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.P selected 4`] = `
<p
  className="uu5-bricks-p uu5-common-selected"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.P style 1`] = `
<p
  className="uu5-bricks-p"
  id="uuID"
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.P style 2`] = `
<p
  className="uu5-bricks-p"
  id="uuID"
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.P style 3`] = `
<p
  className="uu5-bricks-p"
  id="uuID"
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.P style 4`] = `
<p
  className="uu5-bricks-p"
  id="uuID"
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.P textCorrector 1`] = `
<p
  className="uu5-bricks-p"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.P textCorrector 2`] = `
<p
  className="uu5-bricks-p"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.P textCorrector 3`] = `
<p
  className="uu5-bricks-p"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.P textCorrector 4`] = `
<p
  className="uu5-bricks-p"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.P tooltip 1`] = `
<p
  className="uu5-bricks-p"
  id="uuID"
  style={Object {}}
  title="My Tooltip"
/>
`;
